add figures with constraints on char poly

--- a/journal.tex
+++ b/journal.tex
@@ -315,6 +315,13 @@ a & 0 \\
 
 The probability of \emph{a priori} stability and of stability to perturbations for all two component systems is given in Table \ref{tab:structstabmat}.
 
+\begin{figure}[!ht]
+\centering
+\noindent\includegraphics[width=0.5\columnwidth]{fig/region2x2.pdf}
+\caption{{\bf Stability conditions on coefficients of the characteristic polynomial for two component systems.} }
+\label{fig:region2x2}
+\end{figure}
+
 %---------------------------------------------
 
 % We will consider seperately the cases of $d
@@ -633,6 +640,13 @@ $\begin{pmatrix}
 \end{longtable}
 %
 % \end{table}
+
+\begin{figure}[!ht]
+\centering
+\noindent\includegraphics[width=0.5\columnwidth]{fig/region3x3.pdf}
+\caption{{\bf Stability conditions on coefficients of the characteristic polynomial for three component systems.} }
+\label{fig:region3x3}
+\end{figure}
 
 
 \bibliographystyle{amsplain}
