--- a/journal.tex
+++ b/journal.tex
@@ -46,7 +46,7 @@
 
 \begin{document}
 
-\title{Stability of Dynamical System Ensembles}
+\title{Stability of Ensembles of Biological Networks}
 
 %    Information for first author
 \author{Aviv Bergman}
