add plot of stability to perturbations for 3x3 systems

--- a/journal.tex
+++ b/journal.tex
@@ -328,7 +328,14 @@ The probability of \emph{a priori} stability and of stability to perturbations f
 
 \section{Three component systems}
 
-The probability of \emph{a priori} stability and of stability to perturbations for all three component systems is given in Table \ref{tab:structstabmat3}.
+The probability of \emph{a priori} stability and of stability to perturbations for all three component systems is given in Table \ref{tab:structstabmat3}. Fig. \ref{fig:stab3x3} shows the probability of stability to perturbations for all three component systems.
+
+\begin{figure}[!ht]
+\centering
+\noindent\includegraphics[width=0.8\columnwidth]{fig/stab3x3.pdf}
+\caption{{\bf Plot of stability to perturbations versus connectivity for three component systems.} }
+\label{fig:stab3x3}
+\end{figure}
 
 % \begin{table}[h]
 \begin{longtable}{ c || c | c | c }
