--- a/journal.tex
+++ b/journal.tex
@@ -328,13 +328,27 @@ The probability of \emph{a priori} stability and of stability to perturbations f
 
 \section{Three component systems}
 
-The probability of \emph{a priori} stability and of stability to perturbations for all three component systems is given in Table \ref{tab:structstabmat3}. Fig. \ref{fig:stab3x3} shows the probability of stability to perturbations for all three component systems.
+The probability of \emph{a priori} stability and of stability to perturbations for all three component systems is given in Table \ref{tab:structstabmat3}. Fig. \ref{fig:connectcycle3D3x3} shows the probability of stability to perturbations for all three component systems as a function of connectivity and number of cycles. Fig. \ref{fig:stab3x3} shows the probability of stability to perturbations for all three component systems as a function of connectivity. Fig. \ref{fig:cycle3x3} shows the probability of stability to perturbations for all three component systems as a function of the number of simple cycles (elementary circuits) of length greater than one in the corresponding directed graph \cite{Johnson1975}.
+
+\begin{figure}[!ht]
+\centering
+\noindent\includegraphics[width=0.8\columnwidth]{fig/connectcycle3D3x3.pdf}
+\caption{{\bf Plot of stability to perturbations versus number of cycles and connectivity for three component systems.} }
+\label{fig:connectcycle3D3x3}
+\end{figure}
 
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=0.8\columnwidth]{fig/stab3x3.pdf}
 \caption{{\bf Plot of stability to perturbations versus connectivity for three component systems.} }
 \label{fig:stab3x3}
+\end{figure}
+
+\begin{figure}[!ht]
+\centering
+\noindent\includegraphics[width=0.8\columnwidth]{fig/cycle3x3.pdf}
+\caption{{\bf Plot of stability to perturbations versus number of cycles for three component systems.} }
+\label{fig:cycle3x3}
 \end{figure}
 
 \pagebreak
